Update: Google Analytics monitoring, contact info, domain name

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E20V5XLHKN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-E20V5XLHKN');
+  </script>
 
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>compresoro / utilaje pantru constructii</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Compresoro - aer, compresie, mobilitate solutii si servicii. Inchiriere, vanzare, service, reparatii de compresoare, motocompresoare si utilaje pentru constructii">
+  <meta name="author" content="appstruct.eu">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -45,6 +54,8 @@
         <ul class="navbar-list">
           <li class="navbar-item"><a class="navbar-link"><img class="value-img" style="width:20px;height:20px" src="images/telephone.png"></a></li>
           <li class="navbar-item"><a class="navbar-link">+40 745 129 537</a></li>
+          <li class="navbar-item"><a class="navbar-link"><img class="value-img" style="width:20px;height:20px" src="images/placeholder.png"></a></li>
+          <li class="navbar-item"><a class="navbar-link">Str. Bujorului 8, Domnesti</a></li>
           </li>
         </ul>
       </div>
@@ -72,9 +83,9 @@
     <div class="docs-section" id="solutions">
       <h6 class="docs-header">Cum te ajuta compresoro</h6>
       <ul>
-        <li>Construiesti si ai nevoie de utilaje pentru o perioada scurta de timp, o zi sau o saptamana, in functie de complexitatea lucrarii. Inchiriaza.</li>
-        <li>Ai proiecte de construit si iti trebuie masina cu aer comprimat. Cumpara.</li>
-        <li>Reparatiile motoarelor pe care le folosesti sunt costisitoare. Vino la service.</li>
+        <li>Construiesti si ai nevoie de compresoare, motocompresoare, utilaje pentru o perioada scurta de timp, o zi sau o saptamana, in functie de complexitatea lucrarii. Inchiriaza.</li>
+        <li>Ai proiecte de construit si iti trebuie compresor cu aer comprimat. Cumpara.</li>
+        <li>Reparatiile compresoarelor si a utilajelor pe care le folosesti la construit sunt costisitoare. Vino la service.</li>
       </ul>
     </div>
 
